--- a/README
+++ b/README
@@ -59,5 +59,5 @@ support IPv6 due to underlying limitation in the Operating System.
 
 5. Reporting problems
 
-Any problems, bugs or suggested features should be mailed to colm.maccarthaigh
-at heanet.ie.
+Any problems, bugs or suggested features should be mailed to colm
+at apache.org.
