change the license and e-mail addresses

--- a/doc/mnc.1
+++ b/doc/mnc.1
@@ -1,9 +1,10 @@
 .\"
 .\" mnc.1 -- mnc manual
 .\"
-.\" Colm MacCárthaigh, <colm.maccarthaigh@heanet.ie>
+.\" Colm MacCárthaigh, <colm@apache.org>
 .\"
-.\" Copyright (c) 2004 HEAnet Ltd. All rights reserved.
+.\" Copyright (c) 2007 Coolm MacCarthaigh.
+.\" Copyright (c) 2004-2006 HEAnet Ltd. 
 .\"
 .\" This software is an open source.
 .\"
@@ -92,9 +93,9 @@ mnc -l -i eth1 ff31::12 2001:770:18:2::90
 .RE
 .PP
 .SH CREDITS
-mnc is by Colm MacCárthaigh <colm.maccarthaigh@heanet.ie> and is available from:
+mnc is by Colm MacCárthaigh <colm@apache.org> and is available from:
 .PP
-http://people.heanet.ie/~colmmacc/mnc/ 
+http://people.apache.org/~colm/mnc/ 
 .PP
 Additional multicast development and support provided by John Lyons 
 <john.lyons@heanet.ie> and Eoin Kenny <eoin.kenny@heanet.ie>
